# AIDevelopment

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.langgraph/config/: agents.yaml  server.yaml
.langgraph/data/: state.json
.langgraph/data/chroma/: chroma.sqlite3
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: dashboard-app.ts  main.ts
dashboard/src/components/: agent-panel.ts  kanban-board.ts  settings-modal.ts  team-config.ts
dashboard/src/services/: websocket.ts
docs/: README.md  agents.md  api-reference.md  architecture.md  dashboard.md  getting-started.md  git-integration.md  knowledge-layer.md  workflow.md
langgraph_scrum/: config.py  graph.py  knowledge.py  llm.py  server.py  state.py  tmux.py
langgraph_scrum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
langgraph_scrum/nodes/: __init__.py  development.py  git_agent.py  planning.py  review.py
langgraph_scrum/tools/: git.py
tests/integration/: test_workflow.py
