[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-scrum"
version = "0.1.0"
description = "AI-powered Scrum Team using LangGraph, tmux, and Git"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Hannes Nortje", email = "hannes@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langgraph",
    "langchain-anthropic",
    "langchain-openai",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "typer",
    "gitpython",
    "libtmux",
    "chromadb",
    "pydantic-settings",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "types-pyyaml",
    "types-requests"
]

[project.scripts]
scrum-server = "langgraph_scrum.server:main"
scrum-cli = "langgraph_scrum.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["langgraph_scrum*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
