[tool.poetry]
name = "langgraph-scrum"
version = "0.1.0"
description = "AI-powered Scrum Team using LangGraph, tmux, and Git"
authors = ["Hannes Nortje <hannes@example.com>"]
readme = "README.md"
packages = [{include = "langgraph_scrum"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "*"
langchain-anthropic = "*"
langchain-openai = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
websockets = "*"
typer = "*"
gitpython = "*"
libtmux = "*"
chromadb = "*"
pydantic-settings = "*"
python-dotenv = "*"
rich = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
black = "*"
isort = "*"
mypy = "*"
types-pyyaml = "*"
types-requests = "*"

[tool.poetry.scripts]
scrum-server = "langgraph_scrum.server:main"
scrum-cli = "langgraph_scrum.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
